# Object-detection

./: README.md  readme.md  testing.xml  training.xml
codes/: CMakeLists.txt  fhog_object_detector_ex.cpp  train_shape_predictor_ex.cpp  wine_bottle_detection.cpp
